fix: restore model interactions and animations (#80)